# vra

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  install.ps1  install.sh  prepare_airgap_bundle.sh  prepare_ubuntu_vendor.sh  start.ps1  start.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d9f0f8d3b10_dependency_reachability_fields.py  7b9f5b95d6c2_scan_config_scanner_versions.py  9c6f0a4c1b2d_finding_exploit_evidence.py  c2a6b4e9d7f1_finding_provenance_and_verification.py  d4e8a7b6c9f2_llm_profile_timeout_500.py  f8c560350b97_initial.py
backend/app/: config.py  database.py  main.py  tooling.py
backend/app/analysis/: advisory_db.py  apk_decompiler.py  call_graph.py  cve_correlator.py  dependency_context.py  dependency_inventory.py  diagram.py  file_scorer.py  fingerprint.py  icons.py  import_resolver.py  investigation_scope.py  obfuscation.py  package_identity.py  paths.py  structure.py  treesitter.py
backend/app/api/: chat.py  files.py  findings.py  health.py  llm_profiles.py  projects.py  reports.py  scans.py  websocket.py
backend/app/events/: bus.py  models.py
backend/app/models/: __init__.py  agent_decision.py  dependency.py  file.py  finding.py  llm_profile.py  project.py  report.py  scan.py  (+3 more)
backend/data/: package-import-aliases.json
backend/scripts/: bundle_python_scanners.py  download_codeql.py  download_icons.py  download_jadx.py  download_semgrep_rules.py  prepare_airgap_bundle.py  prepare_ubuntu_vendor.py  sync_advisories.py
backend/tests/: conftest.py
(+140 files in other folders)
